--- a/style/style.css
+++ b/style/style.css
@@ -249,7 +249,7 @@ header {
     height: 35px;
     float: left;
     margin: 5px;
-    margin-left: 25px;
+    /*margin-left: 25px;*/
 }
 
 .icon_class {
@@ -290,7 +290,7 @@ header {
 
 .arrow_right {
     width: 5%;
-    float: left;
+    float: right;
     height: 100%;
     /*background-color: #3b5998;*/
 }
